Added solution for dev user
